--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@tanstack/react-table": "^8.21.2",
     "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-router": "^7.2.0",
     "react-slick": "^0.30.3",
+    "react-social-media-embed": "^2.5.18",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
